Fixed: separator width provoking overflow

--- a/Client/web-ui/src/styles/globals.scss
+++ b/Client/web-ui/src/styles/globals.scss
@@ -82,6 +82,5 @@ $text-size-0: 0.8rem;
   box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.75);
 
   border-bottom: 2px solid $primary-color;
-  width: 90%;
   max-height: 2px;
 }
